[tool.poetry]
package-mode = false
name = "aoc-2024"
version = "0.1.0"
description = "Advent of Code 2024"
authors = ["Sam Kasbawala <samarth.kasbawala@uconn.edu>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.13.0"

[tool.pytest.ini_options]
python_files = "*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
